sleep.yaml
#########################################
# Sleep service
#########################################
kind: Namespace
apiVersion: v1
metadata:
  name: sleep-ns
  labels:
    name: sleep-ns
---
apiVersion: v1
kind: Service
metadata:
  name: sleep
  namespace: sleep-ns
  labels:
    app: sleep
    service: sleep
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sleep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: sleep-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
